--- a/css/style.css
+++ b/css/style.css
@@ -817,6 +817,26 @@ a:focus {
   width: 95%;
   margin-top: 100px;
 }
+.whatsapp-float {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 40px;
+  right: 40px;
+  background-color: #25d366;
+  color: #FFF;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 30px;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 1000;
+}
+
+.whatsapp-icon {
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+}
 
 
 
