--- a/css/style.css
+++ b/css/style.css
@@ -837,7 +837,45 @@ a:focus {
   height: 100%;
   padding: 10px;
 }
+.animated-image {
+  width: 100%;
+  height: 100%;
+  animation: fade 3s ease-in-out infinite;
+}
 
+@keyframes fade {
+  0%, 100% {
+      opacity: 1;
+  }
+  50% {
+      opacity: 0;
+  }
+}
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: transparent;
+  z-index: 1000; /* Ensure overlay is on top */
+}
+
+.content {
+  position: relative;
+  z-index: 1; /* Ensures content is below overlay */
+  color: white; /* Adjust text color if needed */
+  padding: 20px;
+  text-align: center;
+}
+
+.overlay lottie-player {
+  width: 100%;
+  height: 100%;
+}
 
 
