--- a/css/style.css
+++ b/css/style.css
@@ -860,9 +860,9 @@ a:focus {
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  
   background: transparent;
-  z-index: 1000; /* Ensure overlay is on top */
+ 
 }
 
 .content {
@@ -870,12 +870,22 @@ a:focus {
   z-index: 1; /* Ensures content is below overlay */
   color: white; /* Adjust text color if needed */
   padding: 20px;
-  text-align: center;
+  
+  margin-left: 500px;
 }
 
 .overlay lottie-player {
   width: 100%;
   height: 100%;
+  margin-left: 1350px;
 }
-
-
+.slider_img-box-logo{
+  width: 400px;
+  height: 400px;
+  margin: 0 auto;
+  margin-right: 400px;
+}
+.slider_img-box-logo img{
+  width: 100%;
+  
+}
