--- a/css/style.css
+++ b/css/style.css
@@ -274,6 +274,7 @@ a:focus {
     80% { transform: translateX(-200%); }
     100% { transform: translateX(-200%); }
   }
+ 
 }
 /*end header section*/
 
@@ -852,6 +853,46 @@ a:focus {
   }
 }
 
+.overlay-i {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  
+  background: transparent;
+ 
+}
+
+.content {
+  position: relative;
+  z-index: 1; /* Ensures content is below overlay */
+  color: white; /* Adjust text color if needed */
+  padding: 20px;
+  
+  margin-left: 500px;
+}
+
+.overlay-i lottie-player {
+  width: 100%;
+  height: 100%;
+
+}
+@media (min-width: 768px) {
+  .overlay-i lottie-player{
+    width: 100%;
+    height: 100%;
+    margin-left: 1450px;
+  }
+  .overlay lottie-player {
+    width: 100%;
+    height: 100%;
+    display: none;
+  }
+ 
+}
 .overlay {
   position: fixed;
   top: 0;
@@ -877,15 +918,6 @@ a:focus {
 .overlay lottie-player {
   width: 100%;
   height: 100%;
-  margin-left: 1350px;
 }
-.slider_img-box-logo{
-  width: 400px;
-  height: 400px;
-  margin: 0 auto;
-  margin-right: 400px;
-}
-.slider_img-box-logo img{
-  width: 100%;
-  
-}
+
+
