--- a/css/style.css
+++ b/css/style.css
@@ -882,13 +882,11 @@ a:focus {
 }
 @media (min-width: 768px) {
   .overlay-i lottie-player{
-    width: 100%;
-    height: 100%;
+    
     margin-left: 1450px;
   }
   .overlay lottie-player {
-    width: 100%;
-    height: 100%;
+   
     display: none;
   }
  
@@ -897,8 +895,8 @@ a:focus {
   position: fixed;
   top: 0;
   left: 0;
+  height: 500px;
   width: 100%;
-  height: 100%;
   display: flex;
   justify-content: center;
   
@@ -908,7 +906,7 @@ a:focus {
 
 .content {
   position: relative;
-  z-index: 1; /* Ensures content is below overlay */
+ 
   color: white; /* Adjust text color if needed */
   padding: 20px;
   
